portfolio, github button zindex solution for fixing click event on mobile displays

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -126,6 +126,7 @@
           display: flex;
           justify-content: center;
           // cursor: pointer;
+          z-index: 30;
         }
 
         button:disabled,
